restructure folder structure

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,6 @@
 }
 
 #canvas {
-    background-image: url(images/space.jpg);
+    background-image: url(../images/space.jpg);
     display: block;
 }
